--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,7 +82,7 @@ select {
   border-style: solid;
   border-color: -internal-light-dark(#767676, #858585);
   -o-border-image: initial;
-     border-image: initial;
+
 }
 
 span,
@@ -1118,7 +1118,7 @@ ol {
   bottom: -1px;
   height: 2px;
   width: 50px;
-  background: #ff6b81;
+  background: #4fc7f2;
   content: "";
 }
 
@@ -1254,7 +1254,7 @@ ol {
   font-size: 15px;
   font-weight: 600;
   padding: 13px 30px;
-  background-color: #ff6b81;
+  background-color: #4fc7f2;
   color: #fff;
   border: none;
   -webkit-transition: 0.2s;
@@ -1569,7 +1569,7 @@ ol {
     color:#4fc7f2 !important;
   }
   .header .navbar-nav .nav-item a {
-    color: #051441;
+    color: #4fc7f2;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1969,6 +1969,13 @@ ol {
   margin-right: 5px;
 }
 
+@media (max-width: 768px){
+  .navbar-collapse{
+    background-color: #081828 !important;
+  }
+}
+
+
 /*======================================
      End Header CSS
   ========================================*/
@@ -2209,7 +2216,7 @@ ol {
 }
 
 /*======================================
-    Features Area CSS
+    Services Area CSS
 ========================================*/
 .features {
   background-color: #f9f9f9;
@@ -2263,58 +2270,6 @@ ol {
   line-height: 22px;
 }
 
-/*======================================
-    Our Achievement CSS
-========================================*/
-.our-achievement {
-  background-color: #ff6b81;
-  text-align: center;
-  padding: 130px 0;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .our-achievement {
-    padding: 80px 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .our-achievement {
-    padding: 60px 0;
-  }
-}
-
-.our-achievement .title h2 {
-  color: #fff;
-  font-weight: 700;
-  font-size: 35px;
-  margin-bottom: 10px;
-}
-
-.our-achievement .title p {
-  color: #fff;
-}
-
-.our-achievement .single-achievement {
-  margin-top: 50px;
-  text-align: center;
-  padding: 0px 10px;
-}
-
-.our-achievement .single-achievement h3 {
-  font-size: 35px;
-  font-weight: 800;
-  display: block;
-  margin-bottom: 5px;
-  color: #fff;
-}
-
-.our-achievement .single-achievement p {
-  font-size: 15px;
-  color: #fff;
-  font-weight: 500;
-  text-transform: capitalize;
-}
 
 @media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
   .our-achievement .title h2 {
@@ -2334,194 +2289,37 @@ ol {
 ===============================*/
 .customer-care{
   background-color: #f9f9f9;
+  padding-bottom: 30px;
 }
-
-/*=============================
-	Pricing Table CSS
-===============================*/
-.pricing-table {
-  background-color: #f9f9f9;
+.border-box{
+  height: auto;
+  width: 150px;
+  box-sizing: border-box;
+  margin: auto;
+  text-align: center;
 }
-
-.pricing-table .section-title {
-  margin-bottom: 50px;
+.center-this{
+  text-align: center;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px), (max-width: 767px) {
-  .pricing-table .section-title {
-    margin-bottom: 30px;
+  .font-phone {
+    font-size: 20px;
   }
 }
 
-.pricing-table .single-table {
-  border: 1px solid #eee;
-  border-radius: 10px;
-  margin-top: 30px;
-  background-color: #fff;
-  -webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) 0s;
-  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) 0s;
+
+/*=============================
+	FAQ section CSS
+===============================*/
+.faq-section{
+  background-color: #f9f9f9;
+}
+.acc-custom-color{
+  background-color: white;
 }
 
-.pricing-table .single-table:hover:hover {
-  -webkit-box-shadow: 0px 3px 5px #00000017;
-          box-shadow: 0px 3px 5px #00000017;
-  -webkit-transform: translateY(-5px);
-          transform: translateY(-5px);
-}
 
-.pricing-table .single-table .table-head {
-  padding: 25px;
-  border-bottom: 1px solid #eee;
-}
-
-.pricing-table .single-table .table-head .title {
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 20px;
-}
-
-.pricing-table .single-table .table-head p {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 22px;
-}
-
-.pricing-table .single-table .table-head .price {
-  padding: 30px 0;
-}
-
-.pricing-table .single-table .table-head .price .amount {
-  font-size: 30px;
-  font-weight: 700;
-  display: inline-block;
-}
-
-.pricing-table .single-table .table-head .price .amount .duration {
-  display: inline-block;
-  font-size: 14px;
-  color: #888;
-  font-weight: 400;
-  margin-left: 3px;
-}
-
-.pricing-table .single-table .table-head .button .btn {
-  width: 100%;
-  padding: 12px 30px;
-  font-size: 13px;
-  background-color: #081828;
-}
-
-.pricing-table .single-table .table-head .button .btn:hover {
-  background-color: #ff6b81;
-  color: #fff;
-}
-
-.pricing-table .single-table .table-content {
-  padding: 25px;
-}
-
-.pricing-table .single-table .table-content .middle-title {
-  font-size: 13px;
-  font-weight: 500;
-  text-transform: uppercase;
-  margin-bottom: 25px;
-}
-
-.pricing-table .single-table .table-content .table-list li {
-  position: relative;
-  padding-left: 25px;
-  font-size: 14px;
-  margin-bottom: 13px;
-}
-
-.pricing-table .single-table .table-content .table-list li:last-child {
-  margin: 0;
-}
-
-.pricing-table .single-table .table-content .table-list li i {
-  color: #ff6b81;
-  font-size: 14px;
-  position: absolute;
-  left: 0;
-  top: 4px;
-}
-
-/*======================================
-    Call To Action CSS
-========================================*/
-.call-action {
-  background-color: #ff6b81;
-}
-
-.call-action .cta-content {
-  text-align: center;
-  padding: 0px 50px;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .call-action .cta-content {
-    padding: 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .call-action .cta-content {
-    padding: 0;
-  }
-}
-
-.call-action .cta-content h2 {
-  color: #fff;
-  line-height: 50px;
-  font-size: 38px;
-  font-weight: 700;
-  margin-bottom: 30px;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .call-action .cta-content h2 {
-    font-size: 32px;
-    line-height: 45px;
-  }
-}
-
-@media (max-width: 767px) {
-  .call-action .cta-content h2 {
-    font-size: 25px;
-    line-height: 35px;
-  }
-}
-
-.call-action .cta-content p {
-  color: #fff;
-  padding: 0px 50px;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .call-action .cta-content p {
-    padding: 0;
-  }
-}
-
-@media (max-width: 767px) {
-  .call-action .cta-content p {
-    padding: 0;
-  }
-}
-
-.call-action .cta-content .button {
-  margin-top: 40px;
-}
-
-.call-action .cta-content .button .btn {
-  background-color: #fff;
-  color: #ff6b81;
-}
-
-.call-action .cta-content .button .btn:hover {
-  color: #fff;
-  background-color: #081828;
-}
 
 /*======================================
 	Error 404 CSS
@@ -2555,7 +2353,7 @@ ol {
 
 .error-area .error-content h1 {
   font-size: 100px;
-  color: #ff6b81;
+  color: #4fc7f2;
   margin-bottom: 25px;
   font-weight: 800;
   line-height: 100px;
@@ -2944,7 +2742,7 @@ ol {
 
 .footer .footer-newsletter .newsletter-form .button .btn {
   display: inline-block;
-  background: #ff6b81;
+  background: #4fc7f2;
   color: #fff;
   height: 48px;
   line-height: 48px;
@@ -2956,6 +2754,6 @@ ol {
 }
 
 .footer .footer-newsletter .newsletter-form .button .btn:hover {
-  color: #ff6b81;
+  color: #4fc7f2;
   background-color: #fff;
 }
